--- a/flowrs/Cargo.toml
+++ b/flowrs/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["crates/flowrs-core", "crates/flowrs-async", "examples", "benches"]
+resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
