--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,17 +34,16 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
 
       - name: Build documentation
-        working-directory: ./flowrs
         run: cargo doc --no-deps --all-features
 
       - name: Create index.html
         run: |
-          echo '<meta http-equiv="refresh" content="0; url=flowrs_core/index.html">' > ./flowrs/target/doc/index.html
+          echo '<meta http-equiv="refresh" content="0; url=flowrs_core/index.html">' > ./target/doc/index.html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./flowrs/target/doc
+          publish_dir: ./target/doc
           force_orphan: true
