🦀 Rename flowrs-async to flowrs-transform and standardize examples
This commit introduces several key changes to improve the framework's clarity and usability:

- Renamed `flowrs-async` crate to `flowrs-transform` to better reflect its purpose
- Updated Cargo.toml and workspace configuration to use the new crate name
- Standardized examples structure by moving from `examples/src/bin/` to `examples/examples/`
- Removed redundant `_example` suffixes from example filenames
- Updated example code to use the new `flowrs-transform` import
- Created new ADRs documenting the renaming and example structure changes:
  - ADR-0018: Rename flowrs-async to flowrs-transform
  - ADR-0019: Examples Structure Standardization

The changes improve the framework's terminology consistency and align with Rust community conventions for example code organization.

--- a/crates/flowrs-transform/Cargo.toml
+++ b/crates/flowrs-transform/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "flowrs-async"
+name = "flowrs-transform"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "DEPRECATED - Renamed to flowrs-transform. This is a compatibility layer that will be removed in a future version."
+description = "Transform node abstractions for the flowrs framework"
 
 [dependencies]
-flowrs-transform = { path = "../flowrs-transform" }
+flowrs-core = { path = "../flowrs-core" }
 tokio = { workspace = true, features = ["full"] }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
@@ -17,6 +17,6 @@ uuid = { workspace = true }
 futures = { workspace = true }
 
 [features]
-default = ["flowrs-transform/default"]
-tokio-full = ["flowrs-transform/tokio-full"]
-tokio-minimal = ["flowrs-transform/tokio-minimal"]
+default = ["tokio-full"]
+tokio-full = ["tokio/full"]
+tokio-minimal = ["tokio/rt", "tokio/sync"]
