--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["crates/flowrs-core", "crates/flowrs-async", "examples", "benches"]
+members = [
+    "crates/flowrs-core",
+    "crates/flowrs-transform",
+    "crates/flowrs-event",
+    "examples",
+    "benches",
+]
 resolver = "2"
 
 [workspace.package]
@@ -16,16 +22,18 @@ homepage = "https://github.com/flowrs-dev/flowrs"
 documentation = "https://docs.rs/flowrs"
 
 [workspace.dependencies]
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.43", features = ["full"] }
 async-trait = "0.1.77"
-thiserror = "1.0.56"
+thiserror = "1.0.58"
 tracing = "0.1.40"
-uuid = { version = "1.7.0", features = ["v4", "serde"] }
+futures = "0.3.30"
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
 serde = { version = "1.0.196", features = ["derive"] }
-serde_json = "1.0.113"
+serde_json = "1.0.112"
 chrono = { version = "0.4.34", features = ["serde"] }
 rand = "0.8.5"
 tracing-subscriber = "0.3.18"
+criterion = "0.5.1"
 
 [profile.dev]
 opt-level = 0
