--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 
 [dependencies]
 flowrs-core = { path = "../crates/flowrs-core" }
-flowrs-async = { path = "../crates/flowrs-async" }
+flowrs-transform = { path = "../crates/flowrs-transform" }
 tokio = { workspace = true }
 criterion = { version = "0.5.1", features = ["async_tokio"] }
 
