--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -2,27 +2,43 @@
 name = "flowrs-examples"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 flowrs-core = { path = "../crates/flowrs-core" }
 flowrs-transform = { path = "../crates/flowrs-transform" }
-tokio = { version = "1.36.0", features = ["full"] }
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-rand = "0.8.5"
-chrono = "0.4.34"
-uuid = { version = "1.7.0", features = ["v4"] }
-async-trait = "0.1.77"
-thiserror = "1.0.56"
+flowrs-event = { path = "../crates/flowrs-event" }
+flowrs-async = { path = "../crates/flowrs-async" }
 
-[[example]]
-name = "transform_node"
-path = "examples/transform_node.rs"
+anyhow = "1.0"
+async-trait = "0.1"
+chrono = "0.4"
+futures = "0.3"
+rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+tokio = { version = "1.24", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+uuid = { version = "1.3", features = ["v4", "serde"] }
 
 [[example]]
 name = "lifecycle_node"
 path = "examples/lifecycle_node.rs"
 
 [[example]]
+name = "transform_node"
+path = "examples/transform_node.rs"
+
+[[example]]
 name = "order_processing"
 path = "examples/order_processing.rs"
+
+[[example]]
+name = "batch_processing"
+path = "examples/batch_processing.rs"
+
+[[example]]
+name = "event_driven_workflow"
+path = "examples/event_driven_workflow.rs"
