🦀 Add Timer Node Implementation with Comprehensive Scheduling Capabilities
This commit introduces the `flowrs-timer` crate, providing advanced time-based workflow extensions:

- Created new `flowrs-timer` crate with comprehensive timer node implementations
- Added ADR-0021 documenting timer node architecture and design decisions
- Implemented `Schedule` enum supporting multiple scheduling patterns:
  - One-time execution
  - Interval-based execution
  - Daily, weekly, and monthly schedules
- Developed `TimerNode` trait and related adapters for flexible time-based workflows
- Added example demonstrating various timer scheduling techniques
- Updated Cargo workspace configuration to include timer crate
- Provided utility traits and methods for timer-based node execution

Key features:
- Supports complex time-based scheduling
- Seamless integration with existing workflow engine
- Robust error handling and scheduling calculations
- Flexible timer node composition and nesting

The implementation enables sophisticated time-driven workflow patterns with strong type safety and async support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "crates/flowrs-core",
     "crates/flowrs-transform",
     "crates/flowrs-event",
+    "crates/flowrs-timer",
     "examples",
     "benches",
 ]
