🦀 Add LongRunning Node Implementation for Stateful Workflows
This commit introduces the `flowrs-longrunning` crate, providing a comprehensive solution for long-running, stateful workflows:

- Created new `flowrs-longrunning` crate with advanced node processing capabilities
- Added ADR-0022 documenting long-running node architecture and design decisions
- Implemented `LongRunningNode` trait supporting:
  - Incremental processing
  - State checkpointing
  - Suspension and resumption of workflows
- Developed `SimpleLongRunningNode` and `LongRunningNodeAdapter` for flexible node execution
- Added `StateStore` trait with `InMemoryStateStore` implementation
- Created comprehensive example demonstrating file processing and multi-step workflows
- Updated Cargo workspace and examples configuration
- Integrated serialization and state management capabilities

Key features:
- Support for complex, multi-step processes
- Robust state management and checkpointing
- Flexible node composition and execution
- Strong type safety and async support

The implementation enables sophisticated long-running workflow patterns with fine-grained control over process execution.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/flowrs-transform",
     "crates/flowrs-event",
     "crates/flowrs-timer",
+    "crates/flowrs-longrunning",
     "examples",
     "benches",
 ]
