🦀 Add Reactive Node Implementation for Dynamic Workflow Responses
This commit introduces the `flowrs-reactive` crate, providing a comprehensive solution for reactive, stream-based workflow nodes:

- Created new `flowrs-reactive` crate with advanced reactive node capabilities
- Added ADR-0017 documenting reactive node architecture and design decisions
- Implemented `ReactiveNode` trait supporting:
  - Stream-based change detection
  - Flexible change handling
  - Dynamic action generation
- Developed `ReactiveNodeAdapter`, `FileWatcherNode`, and `CustomReactiveNode` for versatile reactive workflows
- Added comprehensive example demonstrating file watching and sensor data processing
- Updated Cargo workspace and examples configuration
- Integrated Tokio streams and async stream processing

Key features:
- Support for monitoring external data sources
- Robust change detection and reaction mechanisms
- Flexible node composition for reactive patterns
- Strong type safety and async support

The implementation enables sophisticated event-driven and reactive workflow patterns with fine-grained control over change processing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/flowrs-event",
     "crates/flowrs-timer",
     "crates/flowrs-longrunning",
+    "crates/flowrs-reactive",
     "examples",
     "benches",
 ]
