--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -10,6 +10,7 @@ flowrs-transform = { path = "../crates/flowrs-transform" }
 flowrs-event = { path = "../crates/flowrs-event" }
 flowrs-timer = { path = "../crates/flowrs-timer" }
 flowrs-longrunning = { path = "../crates/flowrs-longrunning" }
+flowrs-reactive = { path = "../crates/flowrs-reactive" }
 flowrs-async = { path = "../crates/flowrs-async" }
 
 anyhow = "1.0"
@@ -21,6 +22,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.35.1", features = ["full"] }
+tokio-stream = "0.1.14"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
@@ -52,3 +54,7 @@ path = "examples/timer_node.rs"
 [[example]]
 name = "longrunning_node"
 path = "examples/longrunning_node.rs"
+
+[[example]]
+name = "reactive_node"
+path = "examples/reactive_node.rs"
