--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,7 +9,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -25,29 +25,29 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for proper versioning
-          
+
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-          
+          python-version: "3.x"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs
           pip install mkdocs-terminal
           pip install mkdocstrings[python]
-          
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
+
       - name: Build documentation
         run: mkdocs build
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'site'
-          
+          path: "site"
+
   deploy:
     environment:
       name: github-pages
