🦀 Simplify Documentation Deployment Workflow
Streamline GitHub Pages documentation deployment:
- Replace complex `documentation.yml` with simpler `docs.yml`
- Use direct GitHub Pages deployment via `peaceiris/actions-gh-pages`
- Remove redundant configuration steps
- Maintain core documentation build and deployment functionality

The changes reduce workflow complexity while preserving the core documentation deployment mechanism for the Flowrs framework.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,11 @@ on:
 permissions:
   contents: write # Needed to push to gh-pages branch
 
+# Concurrency control to ensure only one deployment runs at a time
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
