--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       bump_type:
-        description: 'Version bump type'
+        description: "Version bump type"
         required: true
         type: choice
         options:
@@ -12,7 +12,7 @@ on:
           - minor
           - major
       dry_run:
-        description: 'Dry run (no commits)'
+        description: "Dry run (no commits)"
         required: true
         type: boolean
         default: true
@@ -44,9 +44,9 @@ jobs:
       - name: Bump versions
         run: |
           if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
-            cargo workspaces version ${{ github.event.inputs.bump_type }} --no-git-commit --exact
+            cargo workspaces version ${{ github.event.inputs.bump_type }} --no-git-commit --exact --yes
           else
-            cargo workspaces version ${{ github.event.inputs.bump_type }} --exact
+            cargo workspaces version ${{ github.event.inputs.bump_type }} --exact --yes
             
             # Get the new version
             NEW_VERSION=$(grep -m 1 'version = ' Cargo.toml | cut -d '"' -f 2)
