🦀 Enhance GitHub Actions Workflow Permissions
Add explicit permission settings to GitHub Actions workflows:
- Update CI, release, and version bump workflows with precise content permissions
- Create ADR-0027 documenting GitHub Actions workflow permission strategy
- Ensure least-privilege access for workflow operations
- Resolve permission-related issues in repository interactions

The changes improve workflow reliability and security by implementing clear, granular permission controls for GitHub Actions in the Flowrs framework.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - "v*"
 
+# Sets permissions of the GITHUB_TOKEN to allow creating releases
+permissions:
+  contents: write # Needed for creating GitHub releases
+
 env:
   CARGO_TERM_COLOR: always
 
