🦀 Implement Feature-Based Crate Organization for Flowrs
Refactor the Flowrs framework to use a single crate with feature flags:
- Add feature flags for core, transform, event, timer, longrunning, and reactive modules
- Update Cargo.toml to support optional dependencies
- Modify README to explain new feature-based usage
- Create ADR-0029 documenting the feature-based crate organization strategy
- Update src/lib.rs to conditionally re-export modules based on features
- Update release workflow to publish the single crate
- Add feature flag requirements to example configurations

The changes simplify dependency management and provide more flexible module inclusion for users of the Flowrs framework.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,10 +45,10 @@ jobs:
             exit 1
           fi
 
-      - name: Run tests
+      - name: Run tests with all features
         run: cargo test --all-features
 
-      # Publish crates in dependency order
+      # Publish subcrates first (needed for workspace dependencies)
       - name: Publish flowrs-core
         working-directory: ./crates/flowrs-core
         run: cargo publish --token ${{ secrets.CRATES_IO_TOKEN }}
@@ -91,6 +91,7 @@ jobs:
       - name: Wait for crates.io indexing
         run: sleep 15
 
+      # Publish the main crate with all features
       - name: Publish flowrs (root)
         run: cargo publish --token ${{ secrets.CRATES_IO_TOKEN }}
 
